# sumpy

./: LICENSE.txt  README.md  pyproject.toml
sumpy/: __about__.py  __init__.py  cli.py  core.py
